# archer

./: Cargo.toml  LICENSE  README.md  bump_minor.sh  bump_patch.sh  lib.rs
.config/: config.json5
.github/workflows/: linux.yml  main.yml
ai/: completion.rs  config.rs  conversation.rs  default.json  mod.rs
ai/prompt/: chatml.rs  llama.rs  mistral.rs  mod.rs
ai/providers/: mod.rs  replicate.rs  together.rs
src/: action.rs  agent.rs  app.rs  cli.rs  components.rs  config.rs  handler.rs  lib.rs  main.rs  mode.rs  styles.rs  tui.rs  ui.rs  utils.rs
src/agent/: completion.rs  conversation.rs  message.rs  mod.rs
src/archer_ai/: completion.rs  mod.rs
src/archer_ai/providers/: mod.rs  replicate.rs
src/components/: conversation_manager.rs  conversation_selector.rs  input.rs  model_selector.rs  viewer.rs
