[package]
name = "archer"
version = "0.1.5"
edition = "2021"
description = "An async terminal interface for interacting with multi-stage LLM agents."
homepage = "https://kcaverly.dev"
repository = "https://github.com/kcaverly/archer"
license = "MIT"

authors = ["KCaverly"]

[dependencies]
better-panic = "0.3.0"
clap = { version = "4.4.5", features = ["derive", "cargo", "wrap_help", "unicode", "string", "unstable-styles"] }
color-eyre = "0.6.2"
config = "0.13.3"
crossterm = { version = "0.27.0", features = ["serde", "event-stream"] }
derive_deref = "1.1.1"
directories = "5.0.1"
futures = "0.3.28"
human-panic = "1.2.0"
json5 = "0.4.1"
lazy_static = "1.4.0"
libc = "0.2.148"
log = "0.4.20"
pretty_assertions = "1.4.0"
tui-textarea = "0.4.0"
ratatui = { version = "0.25", features = ["serde", "macros"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
signal-hook = "0.3.17"
strip-ansi-escapes = "0.2.0"
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = "0.7.9"
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "serde"] }
async-channel = "2.1.1"
replicate-rs = "0.8.6"
anyhow = "1.0.75"
reqwest = {version = "0.11.22", features = ["stream"]}
eventsource-stream = "0.2.3"
bytes = "1.5.0"
textwrap = "0.16.0"
strum = "0.25"
strum_macros = "0.25"
arboard = "3.3.0"
uuid = { version = "1.6.1", features = ["serde", "std", "v7", "v4", "fast-rng"]}
indexmap = { version = "2.1.0", features = ["serde"]}
walkdir = "2.4.0"
dirs = "5.0.1"
async-trait = "0.1.75"
regex = "1.10.2"
cargo-aur = "1.6.0"
